[package]
name = "rusty_wiki"
version = "0.1.0"
authors = ["yoshitsugu <yoshitsugu@users.noreply.github.com>"]

[dependencies]
gotham = "0.2"
gotham_derive = "0.2"
hyper = "0.11"
mime = "0.3"
diesel = { version = "1.0", features = ["postgres"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
pandoc = "0.6"
futures = "0.1"